# pengchuanc.github.io

./: .gitignore  .gitmodules  config.toml  deploy.sh  hugo.toml
bookstore/api/: bookstore.api
content/about/: _index.md
content/posts/: _index.md  compile_install_nginx_and_python.md  consul.md  django-channels-deploy.md  fund-screen-system.md  go-embed.md  grpc_stream_python.md  introduction-clientservices.md  introduction-fundscreen.md  introduction_questionnaire.md  introduction_sma_management.md  introduction_sma_system.md  linux_most_used_command.md  mariadb-init.md  mariadb-recovery.md  mariadb-upgrade.md  pub-sub-model.md  python-bytes-str.md  python-class-decorator.md  python-extension.md  python-jwt.md  python-manager.md  python-udp.md  rpc-complie.md  use-hugo.md  vue_force_update.md
docs/: 404.html  index.html  index.xml  sitemap.xml
docs/about/: index.html  index.xml
docs/posts/: index.html  index.xml
docs/tags/: index.html  index.xml
docs/标签/: index.html  index.xml
public/: 404.html  sitemap.xml
public/about/: index.xml
public/tags/: index.xml
src/file_server/: client.py  fileserver_pb2.py  fileserver_pb2_grpc.py  grpc_stream_python.md  server.py
src/gin_embed/: go.mod  go.sum  main.go
src/manager/: client.py  manager.py  server.py
src/speedup/: pyproject.toml  setup.py
src/speedup/src/ccmodule/: ccmodule.cc
src/speedup/src/cpmodule/: cpmodule.c
src/speedup/src/cymodule/: cymodule.pxd  cymodule.pyx
src/speedup/src/pymodule/: pymodule.py
src/speedup/src/speedup/: pp.py
src/speedup/tests/: test_fibnacci.py  test_hello.py
(+39 files in other folders)
