[build-system]
requires = ["setuptools", "Cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speedup"
version = "0.0.1"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
speedup = ["*.pyi", "*.pxd"]
"speedup.cp" = ["*.pxd", "*.pyi", "*.pyx"]
"speedup.cy" = ["*.pxd", "*.pyi", "*.pyx"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
